@@ -53,6 +53,7 @@ CHANGELOG Roundcube Webmail
 - Fix list reload after sending message in another window (#1489931)
 - Fix so address format errors are ignored when saving a draft (#1489954)
 - Fix incorrect label translation in return receipt (#1489963)
+- Fix security issue in delete-response action - allow only ajax request
 
 RELEASE 1.0.1
 -------------
